--- a/src/main/resources/templates/manage.html
+++ b/src/main/resources/templates/manage.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>manage</title>
+    <link rel="shortcut icon" href="#">
 </head>
 <body>
     <h1>必须拥有 manage 授权才能看到</h1>
