--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>后台管理页面</title>
+    <link rel="shortcut icon" href="#">
 </head>
 <body>
     <h1>拥有admin角色才可以看到</h1>
