--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>index</title>
+    <link rel="shortcut icon" href="#">
 </head>
 <body>
     <h1>index</h1>
